just completed new build system, working for x86.

--- a/Makefile_rpi2.inc
+++ b/Makefile_rpi2.inc
@@ -4,5 +4,6 @@ TARGET_DIR = $(DINGOS_PATH)/build/
 INCLUDE_PATH = -I$(DINGOS_PATH)/include -I$(DINGOS_PATH)/include/drivers/cpu/ -I$(DINGOS_PATH)/include/drivers/gpu \
 		       -I$(DINGOS_PATH)/include/memory -I$(DINGOS_PATH)/include/libc -I$(DINGOS_PATH)/include/filesystem
 
-CFLAGS = -O2 -mfpu=neon-vfpv4 -mfloat-abi=hard -march=armv7-a -mtune=cortex-a7 -ffreestanding -nostartfiles
+CFLAGS =  -mfpu=neon-vfpv4 -mfloat-abi=hard -march=armv7-a -mtune=cortex-a7 -ffreestanding -nostartfiles
 LINK = -T $(DINGOS_PATH)/init/linker.ld
+
