--- a/init/Makefile
+++ b/init/Makefile
@@ -1,20 +1,20 @@
-include $(DINGOS_PATH)/Makefile.inc
+ifdef DINGOS_RPI2
+include $(DINGOS_PATH)/Makefile_rpi2.inc
+else ifdef DINGOS_X86
+include $(DINGOS_PATH)/Makefile_x86.inc
+endif
 
-C = $(wildcard *.c)
-COBJ = $(SRC:.c=.o)
-ASM = $(wildcard *.S)
-AOBJ = $(ASM:.S=.o)
-
-SRC = $(C) $(ASM)
-OBJ = $(COBJ) $(AOBJ)
-
-all: $(OBJ)
-
-%.o: %.c
-	$(CC) -c  $(CFLAGS) $(INCLUDE_PATH) -o $(TARGET_DIR)$@ $^
-
-%.o: %.S
-	$(CC) -c  $(CFLAGS) $(INCLUDE_PATH) -o $(TARGET_DIR)$@ $^
+SUBDIRS_RPI2 = rpi2
+SUBDIRS_X86 = x86
 
 
+rpi2: $(SUBDIRS_RPI2)
+x86: $(SUBDIRS_X86)
+
+$(SUBDIRS_RPI2):
+	$(MAKE) -C $@
+$(SUBDIRS_X86):
+	$(MAKE) -C $@
+
+.PHONY: rpi2 x86 $(SUBDIRS_RPI2) $(SUBDIRS_X86) 
 
