--- a/init/rpi2/Makefile
+++ b/init/rpi2/Makefile
@@ -1,4 +1,5 @@
-include $(DINGOS_MAKEFILE_INCLUDE)
+include $(DINGOS_PATH)/Makefile.inc
+
 C = $(wildcard *.c)
 COBJ = $(SRC:.c=.o)
 ASM = $(wildcard *.S)
@@ -7,9 +8,13 @@ AOBJ = $(ASM:.S=.o)
 SRC = $(C) $(ASM)
 OBJ = $(COBJ) $(AOBJ)
 
-rpi2: $(OBJ)
-
-x86: $(OBJ)
+all: $(OBJ)
 
 %.o: %.c
 	$(CC) -c  $(CFLAGS) $(INCLUDE_PATH) -o $(TARGET_DIR)$@ $^
+
+%.o: %.S
+	$(CC) -c  $(CFLAGS) $(INCLUDE_PATH) -o $(TARGET_DIR)$@ $^
+
+
+
