--- a/memory/Makefile
+++ b/memory/Makefile
@@ -1,4 +1,4 @@
-include $(DINGOS_PATH)/Makefile.inc
+include $(DINGOS_MAKEFILE_INCLUDE)
 
 C = $(wildcard *.c)
 COBJ = $(SRC:.c=.o)
@@ -8,7 +8,8 @@ AOBJ = $(ASM:.S=.o)
 SRC = $(C) $(ASM)
 OBJ = $(COBJ) $(AOBJ)
 
-all: $(OBJ)
+rpi2: $(OBJ)
+x86: $(OBJ)
 
 %.o: %.c
 	$(CC) -c  $(CFLAGS) $(INCLUDE_PATH) -o $(TARGET_DIR)$@ $^
