This was a complete overhaul of the build system. Now you can build Dingos both x86 and rpi2. Added vga terminal support for x86 Added a printf-like function for x86

--- a/Makefile_x86.inc
+++ b/Makefile_x86.inc
@@ -1,8 +1,13 @@
 CC = /opt/cross/bin/i686-elf-gcc
 OBJCOPY = /opt/cross/bin/i686-elf-objcopy
-CFLAGS = -std=gnu99 -ffreestanding -Wall -Wextra -nostdlib -nostartfiles
+CFLAGS = -std=gnu99 -ffreestanding -Wall -Wextra -Werror -nostdlib -nostartfiles
 TARGET_DIR = $(DINGOS_PATH)/build/
-INCLUDE_PATH = -I$(DINGOS_PATH)/include -I$(DINGOS_PATH)/include/drivers/cpu/ -I$(DINGOS_PATH)/include/drivers/gpu \
-		       -I$(DINGOS_PATH)/include/memory -I$(DINGOS_PATH)/include/libc -I$(DINGOS_PATH)/include/filesystem
+INCLUDE_PATH = -I$(DINGOS_PATH)/include \
+-I$(DINGOS_PATH)/include/drivers/cpu/ \
+-I$(DINGOS_PATH)/include/drivers/cpu/x86 \
+-I$(DINGOS_PATH)/include/drivers/gpu \
+-I$(DINGOS_PATH)/include/memory \
+-I$(DINGOS_PATH)/include/libc \
+-I$(DINGOS_PATH)/include/filesystem
 
 LINK = -T $(DINGOS_PATH)/init/x86/linker.ld
