--- a/Makefile_rpi2.inc
+++ b/Makefile_rpi2.inc
@@ -5,5 +5,5 @@ INCLUDE_PATH = -I$(DINGOS_PATH)/include -I$(DINGOS_PATH)/include/drivers/cpu/ -I
 		       -I$(DINGOS_PATH)/include/memory -I$(DINGOS_PATH)/include/libc -I$(DINGOS_PATH)/include/filesystem
 
 CFLAGS =  -mfpu=neon-vfpv4 -mfloat-abi=hard -march=armv7-a -mtune=cortex-a7 -ffreestanding -nostartfiles
-LINK = -T $(DINGOS_PATH)/init/linker.ld
+LINK = -T $(DINGOS_PATH)/init/rpi2/linker.ld
 
