--- a/boot/Makefile
+++ b/boot/Makefile
@@ -5,7 +5,7 @@ OBJ := boot.o
 OBJ += startc.o
 
 .PHONY: all
-all: build link
+all: build
 
 .PHONY: clean
 clean:
@@ -19,8 +19,3 @@ build: $(OBJ)
 
 %.o: %.S
 	$(CC) -c $(CFLAGS) -m32 $(INCLUDE_PATH) -o $@ $^
-
-.PHONY: link
-link:
-	$(LD) --omagic -o test.elf -static -m elf_i386 -Ttext 0x7c00 $(OBJ)
-	$(OBJCOPY) test.elf -O binary test.img
